2010-05-16  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/vfslib.tcl: Changed memchan condition from Tcl version 8.6 or
	greater to presence of chan command (since chan now in later 8.5 builds)

2010-02-01  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* Makefile.in (PKG_TCL_SOURCES): Added 'template/tclIndex' to the list 
	of installed files. Required for vfs's based on template vfs to load.

2010-01-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* templatevfs.tcl: workaround for bug in how virtual volumes
	are mounted. Version bumped to 1.5.4.  See:
http://sf.net/tracker/?func=detail&aid=2886914&group_id=10894&atid=110894

2009-10-20  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* tclIndex: Corrected version number.
	* pkgIndex.tcl.in: Edited to replace function of deleted 
	pkgIndex.tcl in template subdir.

2009-10-15  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5.3:

	* templatevfs.tcl: Incorporated AK's fix below.
	* collatevfs.tcl: ensured binary file contents got written
	correctly, and ensured that not only file contents but 
	also file attributes were updated to all write targets.

2009-07-06  Andreas Kupries  <andreask@activestate.com>

	* library/template/templatevfs.tcl (memchan): Fix result for
	* pkgIndex.tcl: unix. The bug was reported on the wiki. The fix
	  there was wrong, did improper handling of the $args argument.
	  Fixed here. Version bumped to 1.5.3.

2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/zipvfs.tcl: Handle directory names that include
	* tests/vfsZip.test:  glob chars. Added some tests.
	* win/makefile.vc: fix running the tests.

2009-02-06  Andreas Kupries  <andreask@activestate.com>

	* library/vfs.tcl.in: New file encapsulating the package load
	process. Cleaner than the loadvfs proc, and much more suitable for
	conversion to a teabag.

	* pkgIndex.tcl.in: Cleaned up the declarations for package 'vfs'.